--- a/contactme.html
+++ b/contactme.html
@@ -8,20 +8,25 @@
         <script src="./scripts.js"></script>
     </head>
     <body>
-        <div id="nav">
-            <h1>navigate</h1>
-            <ul>
-                <li><a href="yamama.html">Home</a></li>
-                <li><a href="contactme.html">Conact</a></li>
-                <li><a href="projects.html">Projects</a></li>
-            </ul>
-        </div>
-
+        <div>
+            <div id="nav">
+                <h1>navigate</h1>
+                <ul>
+                    <li><a href="yamama.html">Home</a></li>
+                    <li><a href="contactme.html">Conact</a></li>
+                    <li><a href="projects.html">Projects</a></li>
+                </ul>
+            </div>
         <h1>Contact Me</h1>
         <p>
             jsheikh2@gmu.edu 
             github.com/jacobshk   |    
             linkedin.com/in/jacob-sheikh
         </p>
+    </div>
+        <div style="align-items: center; justify-content: center;">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/bVQpwxgMQCg?si=hPrGRmYKtRUtcMl-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+        </div>
     </body>
 </html>
