--- a/yamama.html
+++ b/yamama.html
@@ -16,13 +16,17 @@
                 <li><a href="projects.html">Projects</a></li>
             </ul>
         </div>
-
-        <h1>About Me</h1>
-        <p>
-            My name is Jacob, I like to code. Please give me a job.
-            I have experience with Python, nodejs, Java, and a bunch of other stuff you might be interested in.
-            I'm interested in data science, it sounds cool.
-            <a href="./assets/resume.pdf">Click me for a resume!</a>
-        </p>
+        <div>
+            <h1>About Me</h1>
+            <p>
+                My name is Jacob, I like to code. Please give me a job.
+                I have experience with Python, nodejs, Java, and a bunch of other stuff you might be interested in.
+                I'm interested in data science, it sounds cool.
+                <a href="./assets/resume.pdf">Click me for a resume!</a>
+            </p>
+        </div>
+        <div style="padding-top:20vh; background-image: url('./assets/cool.jpg');">
+        </div>
+        <div style="padding-top:40vh; max-width:50vw; max-height:80vh;background-image: url('./assets/cool2.jpg');"></div>
     </body>
 </html>
