--- a/index.html
+++ b/index.html
@@ -8,17 +8,20 @@
         <script src="./scripts.js"></script>
     </head>
     <body>
-        Ready to learn about the coolest student at GMU?
-        <input value="Heck yeah!" type="submit" onclick="submitYes()">
-        <input value="You're not the coolest student." type="submit" onclick="submitNo()">
-        <div id="yamama" style="visibility: hidden">
-            <input value="Let's go!" type="submit" onclick="nyerm()"> 
+        <div>
+            Ready to learn about the coolest student at GMU?
+            <input value="Heck yeah!" type="submit" onclick="submitYes()">
+            <input value="You're not the coolest student." type="submit" onclick="submitNo()">
+            <div id="yamama" style="visibility: hidden">
+                <input value="Let's go!" type="submit" onclick="nyerm()"> 
+            </div>
+            <div id="williamsmithington" style="visibility: hidden;">
+                <img src="./assets/williamsmithington.gif">
+            </div>
+            <div id="lebussy" style="visibility: hidden;">
+                <img src="./assets/superdupercoolimage.jpg" style="max-width:20vw">
+            </div>
         </div>
-        <div id="williamsmithington" style="visibility: hidden;">
-            <img src="./assets/williamsmithington.gif">
-        </div>
-        <div id="lebussy" style="visibility: hidden;">
-            <img src="./assets/superdupercoolimage.jpg" style="max-width:20vw">
-        </div>
+        
     </body>
 </html>
